push notifications now work

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <section></section>
 
+    <button id="subscription" name="Subscription">Subscription</button>
     <script src="image-list.js"></script>
     <script src="app.js"></script>
   </body>
