working on push server

--- a/swApp/index.html
+++ b/swApp/index.html
@@ -19,6 +19,7 @@
     <section></section>
 
     <button id="subscription" name="Subscription">Subscription</button>
+    <button id="doIt">Do it</button>
     <script src="image-list.js"></script>
     <script src="app.js"></script>
   </body>
