--- a/swApp/index.html
+++ b/swApp/index.html
@@ -17,10 +17,14 @@
     <h1>Lego Star Wars gallery</h1>
 
     <section></section>
-
+    <video src="video.mp4" autoplay muted>
+        ok
+      </video>
     <button id="subscription" name="Subscription">Subscription</button>
     <button id="doIt">Do it</button>
     <script src="image-list.js"></script>
     <script src="app.js"></script>
+    <script src="push.min.js"></script>
+    <script src="pushTest.js"></script>
   </body>
 </html>
