--- a/swApp/index.html
+++ b/swApp/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width">
 
-    <title>Service worker demo</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="style.css">
-    <!--[if lt IE 9]>
+  <title>Service worker demo</title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="manifest" href="/manifest.json" />
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "242d20e7-8cd4-4a91-b061-b806236470f8",
+      });
+    });
+  </script>
+  <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-    <h1>Lego Star Wars gallery</h1>
+<body>
+  <h1>Lego Star Wars gallery</h1>
 
-    <section></section>
-    <button id="subscription" name="Subscription">Subscription</button>
-    <button id="doIt">Do it</button>
-    <script src="image-list.js"></script>
-    <script src="app.js"></script>
-    <script src="push.min.js"></script>
-    <script src="pushTest.js"></script>
-  </body>
+  <section></section>
+  <script src="image-list.js"></script>
+  <script src="app.js"></script>
+</body>
+
 </html>
